log/build_2023-02-28_14-59-25/my_package/stdout_stderr.log
running egg_info
writing ../../build/my_package/my_package.egg-info/PKG-INFO
writing dependency_links to ../../build/my_package/my_package.egg-info/dependency_links.txt
writing entry points to ../../build/my_package/my_package.egg-info/entry_points.txt
writing requirements to ../../build/my_package/my_package.egg-info/requires.txt
writing top-level names to ../../build/my_package/my_package.egg-info/top_level.txt
reading manifest file '../../build/my_package/my_package.egg-info/SOURCES.txt'
writing manifest file '../../build/my_package/my_package.egg-info/SOURCES.txt'
running build
running build_py
copying my_package/realfinalattempt.py -> /home/ryanlin12/CSCE452_project2/build/my_package/build/lib/my_package
running install
running install_lib
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
copying /home/ryanlin12/CSCE452_project2/build/my_package/build/lib/my_package/realfinalattempt.py -> /home/ryanlin12/CSCE452_project2/install/my_package/lib/python3.10/site-packages/my_package
byte-compiling /home/ryanlin12/CSCE452_project2/install/my_package/lib/python3.10/site-packages/my_package/final_attempt.py to final_attempt.cpython-310.pyc
  File "/home/ryanlin12/CSCE452_project2/install/my_package/lib/python3.10/site-packages/my_package/final_attempt.py", line 63
    // wrap g_goal.theta to [-pi, pi)
                                    ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['

byte-compiling /home/ryanlin12/CSCE452_project2/install/my_package/lib/python3.10/site-packages/my_package/realfinalattempt.py to realfinalattempt.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/ryanlin12/CSCE452_project2/install/my_package/lib/python3.10/site-packages/my_package-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/my_package/my_package.egg-info to /home/ryanlin12/CSCE452_project2/install/my_package/lib/python3.10/site-packages/my_package-0.0.0-py3.10.egg-info
running install_scripts
Installing a_mlogo script to /home/ryanlin12/CSCE452_project2/install/my_package/lib/my_package
Installing final script to /home/ryanlin12/CSCE452_project2/install/my_package/lib/my_package
Installing listener script to /home/ryanlin12/CSCE452_project2/install/my_package/lib/my_package
Installing my_node script to /home/ryanlin12/CSCE452_project2/install/my_package/lib/my_package
Installing talker script to /home/ryanlin12/CSCE452_project2/install/my_package/lib/my_package
writing list of installed files to '/home/ryanlin12/CSCE452_project2/build/my_package/install.log'
